--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@adonisjs/assembler": "^5.3.0",
     "@symfony/webpack-encore": "^1.4.0",
     "adonis-preset-ts": "^2.1.0",
+    "autoprefixer": "^10.3.5",
     "eslint": "^7.27.0",
     "eslint-plugin-adonis": "^1.3.1",
     "pino-pretty": "^5.0.2",
+    "postcss-loader": "^5.0.0",
     "typescript": "~4.2",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.14",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
@@ -28,6 +32,13 @@
     "@snowdog/front-end-recruitment-test-submodule": "^1.0.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
-  }
+    "source-map-support": "^0.5.19",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2"
+  },
+  "browserslist": [
+    "> 0.5%",
+    "last 3 versions",
+    "Firefox ESR"
+  ]
 }
