--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "build": "node ace build --production",
     "start": "node build/server.js",
     "dev": "node ace serve --watch",
-    "lint": "eslint . --ext .js,.ts"
+    "lint": "eslint . --ext .js,.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@symfony/webpack-encore": "^1.4.0",
+    "@vue/test-utils": "^1.2.2",
     "adonis-preset-ts": "^2.1.0",
     "autoprefixer": "^10.3.5",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.2.1",
     "eslint": "^7.27.0",
     "eslint-plugin-adonis": "^1.3.1",
+    "jest": "^27.2.1",
     "pino-pretty": "^5.0.2",
     "postcss-loader": "^5.0.0",
     "typescript": "~4.2",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.14",
     "youch": "^2.2.2",
@@ -41,5 +49,8 @@
     "> 0.5%",
     "last 3 versions",
     "Firefox ESR"
-  ]
+  ],
+  "babel": {
+    "presets": ["@babel/preset-env"]
+  }
 }
