--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "vue": "^2.6.14",
+    "vue-i18n": "^8.26.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2"
   },
@@ -51,6 +52,8 @@
     "Firefox ESR"
   ],
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
