--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "@adonisjs/shield": "^7.0.2",
     "@adonisjs/view": "^6.0.2",
     "@snowdog/front-end-recruitment-test-submodule": "^1.0.0",
+    "maska": "^1.4.5",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "vue": "^2.6.14",
     "vue-i18n": "^8.26.1",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuelidate": "^0.7.6"
   },
   "browserslist": [
     "> 0.5%",
