--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@adonisjs/shield": "^7.0.2",
     "@adonisjs/view": "^6.0.2",
     "@snowdog/front-end-recruitment-test-submodule": "^1.0.0",
+    "axios": "^0.21.4",
     "maska": "^1.4.5",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
